--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
