--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.10.3",
     "react-player": "^2.16.0",
     "sharp": "^0.33.4",
     "swiper": "^11.1.4",
