--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -20,6 +21,7 @@
     "framer-motion": "^11.2.10",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.395.0",
+    "maath": "^0.10.7",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "random-words": "^2.0.1",
